Demo-1/src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>CRMG_WF__ActivityDate__c</fullName>
        <description>This field is added by Workflow fro Professional Edition. Its populated by a trigger, each time a Task is set to &quot;Completed&quot;. It allows you to build workflow rules based on specific tasks that have been completed.</description>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__ActivityDescription__c</fullName>
        <description>This field is added by Workflow fro Professional Edition. Its populated by a trigger, each time a Task is set to &quot;Completed&quot;. It allows you to build workflow rules based on specific tasks that have been completed.</description>
        <label>Activity Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__ActivitySubject__c</fullName>
        <description>This field is added by Workflow fro Professional Edition. Its populated by a trigger, each time a Task is set to &quot;Completed&quot;. It allows you to build workflow rules based on specific tasks that have been completed.</description>
        <label>Activity Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__Activity_Status__c</fullName>
        <description>This field is added by Workflow fro Professional Edition. Its populated by a trigger, each time a Task is set to &quot;Completed&quot;. It allows you to build workflow rules based on specific tasks that have been completed.</description>
        <label>Activity Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__Activity_Type__c</fullName>
        <description>This field is added by Workflow fro Professional Edition. Its populated by a trigger, each time a Task is set to &quot;Completed&quot;. It allows you to build workflow rules based on specific tasks that have been completed.</description>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__Days_Before_Meeting__c</fullName>
        <description>This field is added by Workflow fro Professional Edition. Its populated by a trigger, each time an Event is scheduled&quot;. It allows you to build workflow rules based on specific meetings that have been created. It also enables your to leverage  merging Meeting details into email templates.</description>
        <formula>IF(
CRMG_WF__Next_Meeting_Date_Time__c &gt; NOW(),
CRMG_WF__Next_Meeting_Date_Time__c - NOW(),
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Before Meeting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__Difference_from_Now_and_Next_Meeting__c</fullName>
        <formula>CRMG_WF__Next_Meeting_Date_Time__c - Now()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Difference from Now and Next Meeting</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__Hours_Before_Meeting__c</fullName>
        <description>ROUND( 24 * (
( 7 * FLOOR( ( CRMG_WF__Meeting_Date__c - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ) ) / 7) +
MIN(7,
MOD( CRMG_WF__Meeting_Date__c - DATETIMEVALUE( &apos;1900-01-08 16:00:00&apos; ), 7) +
MIN( 1, 24 / 24 * ( MOD( CRMG_WF__Meeting_Date__c - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ), 1 ) ) )
)
)
-
( 7 * FLOOR( ( NOW() - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ) ) / 7) +
MIN( 7,
MOD( NOW() - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ), 7 ) +
MIN( 1, 24 / 24 * ( MOD( NOW() - DATETIMEVALUE( &apos;1900-01-08 00:00:00&apos; ), 1) ) )
)
)
),
0 )</description>
        <formula>IF(CRMG_WF__Difference_from_Now_and_Next_Meeting__c * 24 &gt; 0,CRMG_WF__Difference_from_Now_and_Next_Meeting__c * 24,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Before Meeting</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__Meeting_Details__c</fullName>
        <description>This field is added by Workflow fro Professional Edition. Its populated by a trigger, each time an Event is scheduled&quot;. It allows you to build workflow rules based on specific meetings that have been created. It also enables your to leverage  merging Meeting details into email templates.</description>
        <label>Meeting Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__Meeting_Location__c</fullName>
        <description>This field is added by Workflow fro Professional Edition. Its populated by a trigger, each time an Event is scheduled&quot;. It allows you to build workflow rules based on specific meetings that have been created. It also enables your to leverage  merging Meeting details into email templates.</description>
        <label>Meeting Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__Meeting_Subject__c</fullName>
        <description>This field is added by Workflow fro Professional Edition. Its populated by a trigger, each time an Event is scheduled&quot;. It allows you to build workflow rules based on specific meetings that have been created. It also enables your to leverage  merging Meeting details into email templates.</description>
        <label>Meeting Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__Minutes_Before_Meeting__c</fullName>
        <formula>IF(CRMG_WF__Hours_Before_Meeting__c  * 60 &gt; 0,CRMG_WF__Hours_Before_Meeting__c  * 60,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Minutes Before Meeting</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__Next_Meeting_Date_Time__c</fullName>
        <label>Next Meeting</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <picklist>
            <picklistValues>
                <fullName>GC1000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC5000 series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GC3000 series</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRMG_WF__Today__c</fullName>
        <formula>Today ()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FN__Do_Not_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL(FN__Mapping_Status__c , &apos;Located&apos;),  HYPERLINK( &quot;apex/FN__FindNearbymap?aid=null&amp;lid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) ,   HYPERLINK( &quot;apex/FN__LGeoCode?id=&quot; &amp; Id,&quot;Locate Lead&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Located Yet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Located</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem with Address</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>&quot;none&quot;</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>